crates/shipper-core/src/ops/process/snapshots/shipper_core__ops__process__snapshot_tests__snapshot_publish_args_basic.snap
---
source: crates/shipper-core/src/ops/process/snapshot_tests.rs
expression: args
---
- publish
- "--manifest-path"
- crates/foo/Cargo.toml
