crates/shipper-core/src/ops/process/snapshots/shipper_core__ops__process__snapshot_tests__snapshot_publish_args_full_flags.snap
---
source: crates/shipper/src/ops/process/snapshot_tests.rs
expression: args
---
- publish
- "--manifest-path"
- crates/baz/Cargo.toml
- "--registry"
- crates-io
- "--no-verify"
- "--features"
- "serde,tokio"
