crates/shipper-core/src/ops/process/snapshots/shipper_core__ops__process__snapshot_tests__snapshot_publish_args_with_registry_and_no_verify.snap
---
source: crates/shipper-core/src/ops/process/snapshot_tests.rs
expression: args
---
- publish
- "--manifest-path"
- crates/bar/Cargo.toml
- "--registry"
- my-private-registry
- "--no-verify"
